# rust-prac

./: .gitignore  README.md
email-service/: Cargo.toml
email-service/scripts/: init_db.sh
email-service/src/: lib.rs  main.rs  startup.rs
email-service/src/routes/: subscriptions.rs
email-service/tests/: health_check.rs
